Hack to solve the ion-slides width issue on ios

--- a/src/app/onboard/onboard.page.scss
+++ b/src/app/onboard/onboard.page.scss
@@ -1,3 +1,7 @@
+.hidden {
+  display:none
+}
+
 .onboard-container {
   min-height: 100%;
   background: #5a62ff;
